# serde

test_suite/: Cargo.toml
test_suite/no_std/: Cargo.toml
test_suite/tests/: test_annotations.rs  test_borrow.rs  test_de.rs  test_gen.rs  test_identifier.rs  test_macros.rs  test_remote.rs  test_roundtrip.rs  test_ser.rs  test_unstable.rs  test_value.rs
test_suite/tests/compile-fail/borrow/: bad_lifetimes.rs  duplicate_lifetime.rs  duplicate_variant.rs  empty_lifetimes.rs  no_lifetimes.rs  struct_variant.rs  wrong_lifetime.rs
test_suite/tests/compile-fail/conflict/: adjacent-tag.rs  flatten-newtype-struct.rs  flatten-skip-deserializing.rs  flatten-skip-serializing-if.rs  flatten-skip-serializing.rs  flatten-tuple-struct.rs  internal-tag.rs
test_suite/tests/compile-fail/default-attribute/: enum.rs  nameless_struct_fields.rs
test_suite/tests/compile-fail/duplicate-attribute/: rename-and-ser.rs  rename-rename-de.rs  rename-ser-rename-ser.rs  rename-ser-rename.rs  rename-ser-ser.rs  two-rename-ser.rs  with-and-serialize-with.rs
test_suite/tests/compile-fail/enum-representation/: internal-tuple-variant.rs  internally-tagged-struct.rs  untagged-and-internal.rs  untagged-struct.rs
test_suite/tests/compile-fail/identifier/: both.rs  field_struct.rs  field_tuple.rs  newtype_not_last.rs  not_unit.rs  other_not_last.rs  serialize.rs  variant_struct.rs  variant_tuple.rs
test_suite/tests/compile-fail/precondition/: deserialize_de_lifetime.rs  deserialize_dst.rs
test_suite/tests/compile-fail/remote/: bad_getter.rs  bad_remote.rs  enum_getter.rs  missing_field.rs  (+5 more)
(+45 files in other folders)
