[package]
name = "serde2_test_suite"
version = "0.0.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
publish = false

[features]
unstable = ["serde2/unstable", "compiletest_rs"]

[dev-dependencies]
fnv = "1.0"
rustc-serialize = "0.3.16"
serde2 = { path = "../serde", features = ["rc"] }
serde2_derive = { path = "../serde_derive", features = ["deserialize_in_place"] }
serde2_test = { path = "../serde_test" }

[dependencies]
compiletest_rs = { version = "0.3", optional = true, features = ["stable"] }
